--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -17,6 +17,12 @@ repositories {
 	mavenCentral()
 }
 
+configurations {
+	all {
+		exclude group: 'org.slf4j', module: 'slf4j-simple'
+	}
+}
+
 dependencies {
 	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -29,6 +35,7 @@ dependencies {
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'it.ozimov:embedded-redis:0.7.3'
 
 	// JPA & DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -40,8 +47,14 @@ dependencies {
 	// Redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.session:spring-session-data-redis'
+
+	// Validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
-tasks.named('test') {
+tasks.withType(Test) {
 	useJUnitPlatform()
+	jvmArgs(
+			"-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"
+	)
 }
