init: 멀티모듈 초기 셋팅

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
 // /WorkOut/settings.gradle
 rootProject.name = 'WorkOut'
-include 'backend'
+include 'api-admin'
+include 'api-store'
+include 'common'
+include 'queue-consumer'
