--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'it.ozimov:embedded-redis:0.7.3'
+	testRuntimeOnly 'com.h2database:h2'
 
 	// JPA & DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
