--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -42,6 +42,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	// Flyway Core와 사용하는 DB에 맞는 드라이버 추가
+	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-mysql'
+
 	// Security
 	implementation "org.springframework.boot:spring-boot-starter-security"
 
