--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -2,8 +2,8 @@
 spring:
   datasource:
     url: jdbc:mysql://mysql:3306/workout-db?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
-    username: ${DB_USERNAME} # 실제 값은 .env 파일에서 주입
-    password: ${DB_PASSWORD} # 실제 값은 .env 파일에서 주입
+    username: root # 접속 유저를 'root'로 고정합니다.
+    password: ${DB_PASSWORD} # 비밀번호는 .env 파일을 통해 계속 주입받습니다.
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
@@ -14,3 +14,13 @@ spring:
     redis:
       host: redis
       port: 6379
+  flyway:
+    locations: classpath:/migration
+
+encryption:
+  key: ${ENCRYPTION_KEY}
+
+default:
+  profile:
+    image:
+      url: ${DEFAULT_PROFILE_IMAGE_URL}
