--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - UPLOAD_DIR=/uploads/
     volumes:
       - ./uploads:/uploads
+      - ./logs:/app/logs
     networks:
       - my-network
     depends_on:
