--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -11,6 +11,12 @@ spring:
   flyway:
     enabled: true
 
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.orm.jdbc.bind: TRACE
+
 upload:
   local:
     dir: ${UPLOAD_DIR:./uploads/}
+
