--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// Logging
+	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 }
 
 tasks.withType(Test) {
