--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -55,6 +55,9 @@ dependencies {
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// SMTP
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.withType(Test) {
