--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -65,14 +65,18 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           # 서버에서 실행할 명령어들
           script: |
-            # 프로젝트 폴더로 이동합니다.
+            # 1. 프로젝트 폴더로 이동합니다.
             cd ~/Documents/GitHub/workout_backend
 
-            # Docker Hub에서 최신 버전의 spring-app 이미지를 받아옵니다.
+            # 2. main 브랜치의 최신 소스코드를 받아옵니다. (가장 중요!)
+            # 이 명령어가 docker-compose.yml 같은 설정 파일의 변경사항을 서버에 반영합니다.
+            git pull origin main
+
+            # 3. Docker Hub에서 최신 버전의 spring-app 이미지를 받아옵니다.
             /usr/local/bin/docker-compose pull spring-app
 
-            # 새로운 이미지로 컨테이너를 다시 시작합니다.
+            # 4. 새로운 이미지와 설정으로 모든 컨테이너를 다시 시작합니다.
             /usr/local/bin/docker-compose up -d
 
-            # 불필요하게 남은 이전 버전의 Docker 이미지들을 삭제합니다.
+            # 5. 불필요하게 남은 이전 버전의 Docker 이미지들을 삭제합니다.
             /usr/local/bin/docker image prune -f
