--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,14 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -x test
 
+      # [추가] 빌드된 JAR 파일 내용물 확인 단계
+      - name: Verify JAR contents
+        run: |
+          echo "--- Verifying JAR file contents ---"
+          ls -l backend/build/libs/
+          jar -tf backend/build/libs/*.jar | grep logback-spring.xml
+          echo "--- Verification complete ---"
+          
       # 1-5. Docker Hub 로그인: GitHub Secrets에 저장된 정보를 이용해 로그인합니다.
       - name: Login to Docker Hub
         uses: docker/login-action@v2
