--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,6 +23,14 @@ configurations {
 	}
 }
 
+sourceSets {
+	main {
+		resources {
+			srcDirs "src/main/resources"
+		}
+	}
+}
+
 dependencies {
 	// Spring
 	implementation 'org.springframework.boot:spring-boot-starter-web'
