--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -23,12 +23,8 @@ configurations {
 	}
 }
 
-sourceSets {
-	main {
-		resources {
-			srcDirs "src/main/resources"
-		}
-	}
+processResources {
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 dependencies {
