--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,67 +1,68 @@
-# 워크플로우의 이름
+# ci-cd.yml (최종 수정본)
 name: Workout Backend CI/CD
 
-# 이 워크플로우가 실행될 조건 (트리거)
 on:
   push:
-    # 'main' 브랜치에 코드가 push 될 때만 실행됩니다.
     branches: [ "main" ]
 
-# 실행될 작업(Job)들을 정의합니다.
 jobs:
-  # 1. 빌드 및 Docker 이미지 푸시 잡
   build-and-push:
     name: Build and Push Docker Image
-    runs-on: ubuntu-latest # 이 잡은 GitHub이 제공하는 Ubuntu 가상 환경에서 실행됩니다.
+    runs-on: ubuntu-latest
+    outputs: # 1. 잡의 출력을 정의합니다. (deploy 잡에서 사용할 수 있도록)
+      IMAGE_TAG: ${{ steps.vars.outputs.sha_short }}
+
     steps:
-      # 1-1. 소스 코드 체크아웃: GitHub 레포지토리의 코드를 가상 환경으로 내려받습니다.
       - name: Checkout
         uses: actions/checkout@v3
 
-      # 1-5. Docker Hub 로그인: GitHub Secrets에 저장된 정보를 이용해 로그인합니다.
+      # 2. 현재 커밋의 고유 ID(해시)를 짧게 잘라 변수로 만듭니다.
+      - name: Set vars
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
+      # ... JDK 설치, Gradle 빌드 등은 동일 ...
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+      - name: Build with Gradle
+        run: ./gradlew build -x test
+
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 1-6. Docker 이미지 빌드 및 Docker Hub에 푸시
+      # 3. 이미지를 푸시할 때 latest 태그와 고유한 커밋 해시 태그, 두 개를 함께 사용합니다.
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          # 이미지 태그: {DockerHub계정}/{레포지토리이름}:latest
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ steps.vars.outputs.sha_short }}
 
-  # 2. 서버에 배포하는 잡
   deploy:
     name: Deploy to Server
-    # build-and-push 잡이 성공해야만 이 잡이 실행됩니다.
-    needs: build-and-push
+    needs: build-and-push # build-and-push 잡을 참조합니다.
     runs-on: ubuntu-latest
     steps:
-      # 2-1. SSH를 통해 맥북 서버에 접속하여 배포 스크립트 실행
       - name: Deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SSH_KEY }}
-          # 서버에서 실행할 명령어들
+          # 4. 스크립트에서 환경 변수를 설정하여 docker-compose가 새 이미지 태그를 사용하도록 합니다.
           script: |
-            # 1. 프로젝트 폴더로 이동합니다.
+            export APP_IMAGE="${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ needs.build-and-push.outputs.IMAGE_TAG }}"
             cd ~/Documents/GitHub/workout_backend
-
-            # 2. main 브랜치의 최신 소스코드를 받아옵니다. (가장 중요!)
-            # 이 명령어가 docker-compose.yml 같은 설정 파일의 변경사항을 서버에 반영합니다.
             git pull origin main
-
-            # 3. Docker Hub에서 최신 버전의 spring-app 이미지를 받아옵니다.
-            /usr/local/bin/docker-compose pull spring-app
-
-            # 4. 새로운 이미지와 설정으로 모든 컨테이너를 다시 시작합니다.
             /usr/local/bin/docker-compose up -d
-
-            # 5. 불필요하게 남은 이전 버전의 Docker 이미지들을 삭제합니다.
             /usr/local/bin/docker image prune -f
