--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   spring-app:
     #build: .
-    image: ${{APP_IMAGE:-kkddong98/workout_backend:latest}}
+    image: ${APP_IMAGE:-kkddong98/workout_backend:latest}
     container_name: my-spring-app
     env_file: [ ".env" ]
     environment:
