--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,11 +42,12 @@ services:
       - MYSQL_DATABASE=workout-db
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - TZ=Asia/Seoul
+    ports:
+      - "127.0.0.1:3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
       - my-network
-    # [추가] mysql 서비스가 정말 준비되었는지 확인하는 healthcheck 옵션
     healthcheck:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost", "-u", "${DB_USERNAME}", "-p${DB_PASSWORD}" ]
       interval: 10s # 10초마다 체크
