--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
 	// Logging
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 
 tasks.withType(Test) {
