--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,10 +2,10 @@ spring:
   application:
     name: workout-backend
   jpa:
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        format_sql: true
+        use_sql_comments: true
   jackson:
     time-zone: UTC
   flyway:
@@ -13,10 +13,14 @@ spring:
 
 logging:
   level:
+    root: INFO
+    org.springframework: WARN
+    org.hibernate: WARN
+    com.zaxxer.hikari: WARN
+    com.workout: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
 
 upload:
   local:
     dir: ${UPLOAD_DIR:./uploads/}
-
