--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# docker-compose.yml
+# docker-compose.yml (서버/운영 환경용 최종본)
 
 services:
   nginx:
@@ -16,8 +16,11 @@ services:
       - spring-app
 
   spring-app:
+    # CI/CD 파이프라인이 APP_IMAGE 환경 변수를 주입합니다.
     image: ${APP_IMAGE:-kkddong98/workout_backend:latest}
     container_name: my-spring-app
+    # 추가: 항상 Docker Hub에서 최신 이미지를 pull 하도록 정책 설정
+    pull_policy: always
     env_file: [ ".env" ]
     environment:
       - SPRING_PROFILES_ACTIVE=docker
@@ -61,6 +64,7 @@ services:
       - redis-data:/data
     networks:
       - my-network
+
   loki:
     image: grafana/loki:latest
     container_name: my-loki
@@ -74,8 +78,8 @@ services:
     image: grafana/promtail:latest
     container_name: my-promtail
     volumes:
-      - ./promtail-config.yml:/etc/promtail/config.yml # 1단계에서 만든 설정 파일 마운트
-      - ./logs:/app/logs:ro # spring-app이 생성한 로그를 읽기 전용(ro)으로 마운트
+      - ./promtail-config.yml:/etc/promtail/config.yml
+      - ./logs:/app/logs:ro
     command: -config.file=/etc/promtail/config.yml
     networks:
       - my-network
@@ -86,7 +90,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - grafana-data:/var/lib/grafana # Grafana 설정 유지를 위한 볼륨
+      - grafana-data:/var/lib/grafana
     networks:
       - my-network
 
@@ -97,4 +101,4 @@ networks:
 volumes:
   mysql-data:
   redis-data:
-  grafana-data: # Grafana 볼륨 추가
+  grafana-data:
