--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 	// Logging
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	//swagger
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.10'
 }
 
 tasks.withType(Test) {
