--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@ uploads/
 .env.*
 !.env.sample
 docker-compose.override.yml
+/config/
+
+# 로컬 테스트용 FCM 키 파일 무시
+src/main/resources/config/fcm-key.json
