--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,3 +24,6 @@ logging:
 upload:
   local:
     dir: ${UPLOAD_DIR:./uploads/}
+
+fcm:
+  service-account-key-path: "classpath:config/fcm-key.json"
