--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,6 +66,12 @@ jobs:
             # 명시적으로 최신 이미지를 pull 합니다.
             /usr/local/bin/docker-compose pull spring-app
             
+            # 1. config 디렉토리 생성 (없으면 만들기)
+            mkdir -p ./config
+  
+            # 2. GitHub Secret 값을 Base64 디코딩하여 파일로 저장
+            echo "${{ secrets.FCM_KEY_BASE64 }}" | base64 --decode > ./config/fcm-key.json
+    
             # 서비스를 재시작합니다.
             /usr/local/bin/docker-compose up -d --force-recreate
             
