--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -60,8 +60,12 @@ dependencies {
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
 
-	//swagger
+	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.10'
+
+	// FCM
+	implementation 'com.google.firebase:firebase-admin:9.4.3'
+
 }
 
 tasks.withType(Test) {
