--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -59,6 +59,12 @@ dependencies {
 	// Logging
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-aop'
+
+	// OAuth
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 }
 
 tasks.withType(Test) {
@@ -67,3 +73,5 @@ tasks.withType(Test) {
 			"-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"
 	)
 }
+
+tasks.register("prepareKotlinBuildScriptModel"){}
