--- a/backend/src/main/resources/application-docker.yml
+++ b/backend/src/main/resources/application-docker.yml
@@ -5,6 +5,8 @@ spring:
     username: root # 접속 유저를 'root'로 고정합니다.
     password: ${DB_PASSWORD} # 비밀번호는 .env 파일을 통해 계속 주입받습니다.
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 50
   jpa:
     hibernate:
       ddl-auto: validate
@@ -19,6 +21,11 @@ spring:
   batch:
     job:
       enabled: false
+  cache:
+    type: redis
+    redis:
+      time-to-live: 10m
+      cache-null-values: false
 
 management:
   endpoints:
