--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
 
   spring-app:
     # CI/CD 파이프라인이 APP_IMAGE 환경 변수를 주입합니다.
-    #image: ${APP_IMAGE:-kkddong98/workout_backend:latest}
-    #pull_policy: always
-    build: .
+    image: ${APP_IMAGE:-kkddong98/workout_backend:latest}
+    pull_policy: always
+    #build: .
     container_name: my-spring-app
     env_file: [ ".env" ]
     environment:
