--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
 
         # 기존의 Spring Boot로 모든 요청을 전달하는 블록
         location / {
-            proxy_pass http://spring-app:8080;
+            proxy_pass http://spring-app:8080/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
