--- a/.gitignore
+++ b/.gitignore
@@ -105,7 +105,7 @@ src/main/resources/application-prod.yml
 *.der
 **/credentials.json
 **/aws-credentials.json
-
+/config/*
 # ----------------------------
 # 데이터베이스/로컬 저장 파일
 # ----------------------------
