--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
 	// JPA & DB
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'com.mysql:mysql-connector-j'
 
 	// Flyway Core와 사용하는 DB에 맞는 드라이버 추가
 	implementation 'org.flywaydb:flyway-core'
@@ -77,8 +77,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-  // OAuth2
-  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	// OAuth2
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 
 	// L1 로컬 캐시: Caffeine
 	implementation 'com.github.ben-manes.caffeine:caffeine'
@@ -94,10 +95,9 @@ dependencies {
 	implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'
 }
 
-/*
 tasks.withType(Test) {
 	useJUnitPlatform()
 	jvmArgs(
 			"-javaagent:${classpath.find { it.name.contains('byte-buddy-agent') }.absolutePath}"
 	)
-}*/
+}
