--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
   batch:
     job:
       enabled: false
+  app:
+    oauth2:
+      authorized-redirect-uris:
+        - workoutapp://oauth/callback
 
 logging:
   level:
@@ -23,7 +27,6 @@ logging:
     com.workout: INFO
     org.hibernate.SQL: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
-
 
 upload:
   local:
