--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -14,13 +14,14 @@ http {
             try_files $uri =404;
         }
 
-        location ~ ^/(api|oauth2|login)/ {
-            proxy_pass http://spring-app:8080;
 
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        location ~ ^/(api|oauth2|login|swagger-ui|v3)/ {
+                    proxy_pass http://spring-app:8080;
+
+                    proxy_set_header Host $host;
+                    proxy_set_header X-Real-IP $remote_addr;
+                    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                    proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
