chore/ 더미 생성 로직 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,7 @@ uploads/
 docker-compose.override.yml
 /config/
 docker-compose.test.yml
+backend/src/main/java/com/workout/test/
 
 # 로컬 테스트용 FCM 키 파일 무시
 src/main/resources/config/fcm-key.json
